@@ -1,5 +1,6 @@
 package victor.training.java.loom;
 
+import jdk.incubator.concurrent.StructuredTaskScope;
 import jdk.incubator.concurrent.StructuredTaskScope.ShutdownOnFailure;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -14,6 +15,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.lang.System.currentTimeMillis;
 
+// https://openjdk.org/jeps/428
 @RestController
 public class StructuredConcurrency {
   private static final Logger log = LoggerFactory.getLogger(StructuredConcurrency.class);
@@ -21,7 +23,7 @@ public class StructuredConcurrency {
   private final RestTemplate rest = new RestTemplate();
   private static final AtomicInteger indexCounter = new AtomicInteger(0);
 
-
+  // ADD TO THE VM OPTIONS: --add-modules jdk.incubator.concurrent
 
   @GetMapping("/par")
   public String get() throws InterruptedException, ExecutionException {
@@ -35,9 +37,7 @@ public class StructuredConcurrency {
       scope.throwIfFailed(); // ... and propagate errors
 
       // Here, both forks have succeeded, so compose their results
-      String result = beer1F.resultNow() + " and " + beer2F.resultNow();
-
-      log.info(index + " took " + (currentTimeMillis() - t0));
+      String result = "Request #"+index+ " completed in " + (currentTimeMillis() - t0) + ": " + beer1F.resultNow() + " and " + beer2F.resultNow();
       return result;
     }
   }
